packages/codex-docs/docs/.vitepress/theme/custom.css
/* ... */
.vp-doc h4 {
	margin-top: var( --spacing-150 );
	font-size: var( --font-size-large );
	line-height: var( --line-height-xxx-small );
}

.vp-doc h5 {
	margin-top: var( --spacing-125 );
	font-size: var( --font-size-medium );
	line-height: var( --line-height-xxx-small );
}

.vp-doc h6 {
	font-size: var( --font-size-medium );
	line-height: var( --line-height-medium );
}

.vp-doc a {
	/* Use `initial` to reset VitePress' opinionated font weight to browser default. */
	font-weight: initial;
	text-decoration: var( --text-decoration-none );
	transition-duration: 0s;
}

.vp-doc a:hover {
	color: var( --color-progressive );
	text-decoration: var( --text-decoration-underline );
}

.vp-doc p,
.vp-doc li {
	clear: both;
	line-height: var( --line-height-medium );
}

.vp-doc img,
.vp-doc video,
.vp-doc h1 + p {
	margin-top: var( --spacing-125 );
}

.vp-doc h4 + p {
	margin-top: var( --spacing-75 );
}

.vp-doc table {
	display: table;
}

.vp-doc th,
.vp-doc td {
	border-color: var( --border-color-subtle );
	padding: var( --spacing-50 ) var( --spacing-75 );
	/* Use relative size in general. */
	font-size: var( --font-size-small );
}

.vp-doc td pre {
	margin: 0;
}

.vp-doc figcaption {
	font-size: var( --font-size-small );
	/* There is no token for this. */
	/* stylelint-disable-next-line scale-unlimited/declaration-strict-value */
	font-style: italic;
}

/* Navigation. ------------------------------------------------------------- */

.Layout .VPSidebar {
	background-color: var( --background-color-base );
	border-right: var( --border-width-base ) var( --border-style-base ) var( --border-color-subtle );
}

/* When the sidebar is not collapsed... */
@media screen and ( min-width: 960px ) {
	/* Get rid of blurred background of fixed header. */
	.VPSidebar .curtain {
		background-color: var( --background-color-base );
	}
}

.VPNavBarTitle .title {
	font-size: var( --font-size-x-large );
}

.VPNavBarTitle .title:hover {
	color: var( --color-base--hover );
	opacity: var( --opacity-base );
}

/* Main nav dropdown menu. */
.VPFlyout .VPMenu {
	border-color: var( --border-color-base );
	border-radius: var( --border-radius-base );
	padding: 0;
	box-shadow: var( --box-shadow-drop-medium );
}

/* Main nav dropdown link. */
.VPFlyout .link {
	border-radius: var( --border-radius-base );
	padding: var( --spacing-50 ) var( --spacing-75 );
	line-height: var( --line-height-medium );
	transition-property: var( --transition-property-base );
	transition-duration: var( --transition-duration-base );
}

.VPFlyout .link:hover {
	background-color: var( --background-color-interactive );
}

.VPFlyout .link:active,
.VPFlyout .link.active {
	background-color: var( --background-color-progressive-subtle );
}

/*
 * Large screen social links.
 * Also show on medium screens so we can avoid a pointless flyout menu with our single social link.
 * See https://phabricator.wikimedia.org/T345982.
 */
.VPSocialLinks.VPNavBarSocialLinks {
	@media ( min-width: 768px ) {
		display: flex;
		align-items: center;
	}
}

/* Hide medium-screen flyout menu for social links. */
.VPFlyout.VPNavBarExtra {
	display: none;
}

/* stylelint-disable-next-line no-descending-specificity */
.VPNavBar .link,
.VPNavBar .text,
.VPSidebar .text,
.VPDocFooter .desc,
.VPDocFooter .title {
	font-size: initial;
}

.VPSidebar .link .text,
.VPDocAside .content {
	font-size: initial;
	font-weight: var( --font-weight-normal );
}

/* Mimic main sidebar styles within right sidebar. */
.VPDocAside .outline-title,
.VPDocAside .outline-link {
	padding: var( --spacing-35 ) 0;
	font-size: var( --font-size-small );
	line-height: var( --line-height-medium );
}

/* Enlarge outline marker to match enlarged font size of outline links */
.VPDocAside .outline-marker {
	height: calc( var( --font-size-small ) * var( --line-height-medium ) + 2 * var( --spacing-35 ) );
}

/* Higher specificity to override VitePress internal `.VPSidebarItem.level-1.is-link > .item > .link:hover .text[data-v-foo]` */
.VPSidebar .link:hover .text,
.VPDocAside .outline-link:hover {
	/* stylelint-disable-next-line declaration-no-important */
	color: var( --color-progressive--hover ) !important;
}

/* Higher specificity to override VitePress internal `.VPSidebarItem.level-1.is-active > .item > .link .text[data-v-foo]` */
.VPSidebar .VPSitebarItem.is-link.is-active .link .text,
.VPDocAside .outline-link.active {
	/* stylelint-disable-next-line declaration-no-important */
	color: var( --color-progressive ) !important;
	/* stylelint-disable-next-line declaration-no-important */
	font-weight: var( --font-weight-bold ) !important;
}

/* Menu navigation on screen sizes < 960px. */
.VPLocalNav .menu,
.VPLocalNav .VPLocalNavOutlineDropdown button,
.VPLocalNav .menu-text,
.VPLocalNav .top-link {
	font-size: var( --font-size-medium );
}

/* Menu button icon on screen sizes < 960px. */
.VPLocalNav .menu-icon {
	min-width: var( --min-size-icon-medium );
	min-height: var( --min-size-icon-medium );
}

/* Footer. ----------------------------------------------------------------- */

/* Use Codex Card styles on `.pager-link` */
.VPDocFooter .pager-link {
	border-color: var( --border-color-base );
	border-radius: var( --border-radius-base );
	padding: var( --spacing-75 );
}

.VPDocFooter .pager-link:hover {
	border-color: var( --border-color-interactive );
}

.VPDocFooter .pager-link:focus {
	border-color: var( --border-color-progressive--focus );
	/* stylelint-disable-next-line stylistic/declaration-colon-newline-after,
		stylistic/value-list-comma-newline-after,
		scale-unlimited/declaration-strict-value */
	box-shadow: var( --box-shadow-inset-small ) var( --box-shadow-color-progressive--focus ),
		var( --box-shadow-inset-medium ) var( --box-shadow-color-inverted );
	outline: var( --outline-base--focus );
}

.pager .pager-link:hover .title {
	color: var( --color-progressive );
}
/* ... */

